--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,9 +19,11 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        working-directory: ./pzportfolio
 
       - name: Build project
-        run: PUBLIC_URL=/pzportfolio npm run build
+        run: npm run build
+        working-directory: ./pzportfolio
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
